# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.130 2004/12/18 04:47:14 zhen Exp $

  17 Dec 2004; John Davis <zhen@gentoo.org> modules/catalyst_support.py:
  fix for #66592. catalyst now gives a traceback when it bails out, making
  troubleshooting amazingly easier

  17 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/netboot.py, modules/stage1_target.py, modules/tinderbox_target.py:
  Reversing patch from Eric Edgar from bug #70663.

  17 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Added -no-emul-boot back into x86-archscript.sh as apparently isolinux will
  not work without it (mkisofs fails on creating ISO).

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/netboot.py, modules/stage1_target.py, modules/tinderbox_target.py:
  Added patches from Eric Edgar <e_edgar@hotmail.com> from bug #70663 to
  separate out specific target logic from the generic targets modules.

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/embedded_target.py, targets/embedded/embedded-fs-runscript.sh,
  targets/embedded/embedded.sh:
  Added more embedded updates from mutex@gentoo.org and Closing bug #67289.

  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +examples/gamecd.conf.example, -livecd/files/gamecd-xinitrc,
  livecd/runscript/default-runscript.sh,
  livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py: